--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,148 @@
-body {
-    /* display: flex; */
-    /* align-items: center; */
-    /* justify-content: space-between; */
+/* Каждый браузер отображает стили по умолчанию на свой лад. Поэтому нужны обнуляющие стили.*/
+* {
+    padding: 0;
+    margin: 0;
+    border: 0;
 }
-.container {
+
+*,
+*:before,
+*:after {
+    -moz-box-sizing: border-box;
+    /* в width и heigth входит padding и border но не маржин*/
+    -webkit-box-sizing: border-box;
+    /*Н-р при ширине 500px и padding 20px, ширина грагиц будет 500px, а не 520px по умолчанию*/
+    box-sizing: border-box;
+}
+
+:focus,
+:active {
+    outline: none;
+}
+
+a:focus,
+a:active {
+    outline: none;
+}
+
+nav,
+footer,
+header,
+aside {
+    display: block;
+}
+
+html,
+body {
     height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: space-between;
-  }
+    width: 100%;
+    font-size: 100%;
+    line-height: 1;
+    /* Промежуток между строками равен размеру шрифта. */
+    font-size: 14px;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+}
+
+input,
+button,
+textarea {
+    font-family: inherit;
+}
+
+input::-ms-clear {
+    display: none;
+}
+
+button {
+    cursor: pointer;
+}
+
+button::-moz-focus-inner {
+    padding: 0;
+    border: 0;
+}
+
+a,
+a:visited {
+    text-decoration: none;
+}
+
+ul li {
+    list-style: none;
+}
+
+img {
+    vertical-align: top;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-size: inherit;
+    font-weight: 400;
+}
+
+/*-----------------------------------*/
+.towns {}
+
+.towns div {
+    height: 8vh;
+    width: 12vh;
+    background-size: auto 100%;
+    background-repeat: no-repeat;
+    margin: 5px;
+}
+
+.towns--castle {
+    background: url(../img/towns/castle.gif);
+}
+
+.towns--conflux {
+    background: url(../img/towns/conflux.gif);
+}
+
+.towns--cove {
+    background: url(../img/towns/cove.gif);
+}
+
+.towns--dungeon {
+    background: url(../img/towns/dungeon.gif);
+}
+
+.towns--fortress {
+    background: url(../img/towns/fortress.gif);
+}
+
+.towns--inferno {
+    background: url(../img/towns/inferno.gif);
+}
+
+.towns--necropolis {
+    background: url(../img/towns/necropolis.gif);
+}
+
+.towns--neutral {
+    background: url(../img/towns/neutral.gif);
+}
+
+.towns--rampart {
+    background: url(../img/towns/rampart.gif);
+}
+
+.towns--stronghold {
+    background: url(../img/towns/stronghold.gif);
+}
+
+.towns--tower {
+    background: url(../img/towns/tower.gif);
+}
+
+
+.townSelection {
+    outline: 5px red solid;
+}
