--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,25 @@ a {
     color: wheat;
 }
 
+/* Hide standard arrows for input with type="number".*/
+input[type="number"] {
+    -webkit-appearance: textfield;
+    -moz-appearance: textfield;
+    appearance: textfield;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+}
+
+header {
+    color: white;
+    text-align: center;
+    font-size: 1.5rem;
+    padding: 5px;
+}
+
 .container {
     max-width: 600px;
     max-height: 720px;
@@ -13,7 +32,6 @@ a {
     height: 100%;
     display: grid;
     grid-template-areas:
-        /* "header header header" */
         "towns pitlord pitlord"
         "towns creatures creatures"
         "towns creatures creatures"
@@ -22,7 +40,8 @@ a {
         "towns demons demons"
         "towns footer footer";
     grid-template-columns: 1fr 2fr 2fr;
-    grid-template-rows: 1fr repeat(6, 2fr) 1fr;
+    grid-template-rows: repeat(6, 2fr) .5fr;
+    grid-gap: 10px;
 }
 
 .card {
@@ -35,7 +54,6 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    margin: 0 0 10px 10px;
 }
 
 .town {
@@ -47,7 +65,6 @@ a {
 
 #pitlords-number {
     grid-area: pitlord;
-    margin: 0 10px 0 10px;
     display: flex;
     justify-content: space-between;
 }
@@ -68,25 +85,18 @@ a {
     }
 }
 
-.number-input {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 .arrow {
     background: url(../img/arrow_left.png) 0 0 / 100% no-repeat;
     width: 28px;
     height: 30px;
 }
 
-.number-input input {
+.number {
     font-size: 3rem;
     width: 6rem;
     text-align: center;
     color: lightgoldenrodyellow;
     background-color: rgba(0, 0, 0, 0.5);
-    margin: 0 10px 0 10px;
 }
 
 #creatures-list {
@@ -95,7 +105,6 @@ a {
     flex-wrap: wrap;
     justify-content: space-around;
     align-content: flex-start;
-    margin: 10px;
 }
 
 #creatures-list div {
@@ -106,11 +115,29 @@ a {
     margin: 0 0 5px 0;
 }
 
+#sacrificed-number {
+    grid-area: sacrifice;
+}
+
+
+#efficient-number {
+    grid-area: efficient;
+}
+
+#demons-number {
+    grid-area: demons;
+}
+
 footer {
     grid-area: footer;
     color: white;
-    margin: 10px;
     text-align: right;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .mirror {
