--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,12 @@ body {
     background: url(../img/lava.png) 0 0 / 100% 100% no-repeat;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 
 a {
-    color: wheat;
+    color: #f5deb3;
 }
 
 /* Hide standard arrows for input with type="number".*/
@@ -24,7 +25,7 @@ input[type=number]::-webkit-outer-spin-button {
 header {
     color: white;
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     padding: 5px;
 }
 
@@ -65,6 +66,7 @@ header {
     padding-top: 65%;
     background-size: auto 100%;
     background-repeat: no-repeat;
+    border: 1px solid grey;
 }
 
 #pitlords-number {
@@ -130,6 +132,24 @@ header {
 
 #demons-number {
     grid-area: demons;
+    display: flex;
+    justify-content: space-between;
+}
+
+.demon-pic {
+    height: 100px;
+    width: 50px;
+    background: url(../img/sprite_sheets/demon.png) no-repeat;
+}
+
+.demon-pic:hover {
+    animation: demon-hover .35s steps(3)  forwards;
+}
+
+@keyframes demon-hover {
+    100% {
+        background-position: -150px 0;
+    }
 }
 
 footer {
