--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,7 @@
 @font-face {
-    font-family: WingsOfDarkness;
-    src: url(../fonts/Wings_of_Darkness.ttf);
-}
-
-@font-face {
     font-family: Wentrisor;
     src: url(../fonts/Wentrisor.ttf);
-    size-adjust: 80%;
+    size-adjust: 90%;
 }
 
 
@@ -67,7 +62,7 @@ header h1 {
 }
 
 .card .title {
-    font-family: WingsOfDarkness;
+    font-family: Wentrisor;
 }
 
 #towns-list {
@@ -196,6 +191,7 @@ header h1 {
 footer {
     grid-area: footer;
     text-align: right;
+    font-size: 0.8rem;
 }
 
 footer p {
@@ -206,7 +202,7 @@ footer p {
 a {
     font-family: serif;
     color: #f5deb3;
-    font-size: 1rem;
+    font-size: .9rem;
 }
 
 .center {
