--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,6 @@ header h1 {
 .arrow {
     width: 28px;
     height: 30px;
-    /* z-index: 2; */
 }
 
 .arrow.left {
@@ -190,7 +189,9 @@ header h1 {
 
 footer {
     grid-area: footer;
-    text-align: right;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     font-size: 0.8rem;
 }
 
@@ -217,4 +218,78 @@ a {
 
 .selected {
     box-shadow: 0 0 0 1px gold;
+}
+
+#how-to {
+    display: none;
+}
+
+#how-to:target {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+}
+
+#how-to .card {
+    max-width: 700px;
+    max-height: 720px;
+    margin: 0 auto;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#how-to .card::before {
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-color: rgba(0, 0, 0, .7);
+    content: "";
+    cursor: default;
+    z-index: -1;
+}
+
+#how-to h2 {
+    margin-top: 0.8rem;
+}
+
+#how-to img {
+    padding: .5rem;
+}
+
+#how-to p {
+    font: 1em sans-serif;
+    margin-top: 0.4rem;
+    width: 100%;
+}
+
+#how-to ol {
+    margin-top: 0.4rem;
+    width: 100%;
+    margin-left: 2rem;
+}
+
+#how-to li {
+    font: 1em sans-serif;
+}
+
+.ok-button {
+    display: block;
+    width: 64px;
+    height: 30px;
+    background: url('../img/sprite_sheets/ok_button.png') no-repeat;
+    margin-top: 0.8rem;
+}
+
+.ok-button:active {
+    background-position: -64px;
 }
