--- a/src/css/style.css
+++ b/src/css/style.css
@@ -34,6 +34,13 @@ header h1 {
     text-align: center;
     font-size: 1.6rem;
     padding: 5px;
+    text-shadow: 2px 2px black;
+}
+
+@media only screen and (max-width: 768px) {
+    header h1{
+        font-size: 5vw;
+    }
 }
 
 .container {
