migrate to .webp

--- a/src/css/towns_backgrounds.css
+++ b/src/css/towns_backgrounds.css
@@ -1,43 +1,43 @@
 #castle {
-    background-image: url(../img/towns/castle.gif);
+    background-image: url(../img/towns/castle.webp);
 }
 
 #conflux {
-    background-image: url(../img/towns/conflux.gif);
+    background-image: url(../img/towns/conflux.webp);
 }
 
 #cove {
-    background-image: url(../img/towns/cove.gif);
+    background-image: url(../img/towns/cove.webp);
 }
 
 #dungeon {
-    background-image: url(../img/towns/dungeon.gif);
+    background-image: url(../img/towns/dungeon.webp);
 }
 
 #fortress {
-    background-image: url(../img/towns/fortress.gif);
+    background-image: url(../img/towns/fortress.webp);
 }
 
 #inferno {
-    background-image: url(../img/towns/inferno.gif);
+    background-image: url(../img/towns/inferno.webp);
 }
 
 #neutral {
-    background-image: url(../img/towns/neutral.gif);
+    background-image: url(../img/towns/neutral.webp);
 }
 
 #neutral-hota {
-    background-image: url(../img/towns/neutral_hota.gif);
+    background-image: url(../img/towns/neutral_hota.webp);
 }
 
 #rampart {
-    background-image: url(../img/towns/rampart.gif);
+    background-image: url(../img/towns/rampart.webp);
 }
 
 #stronghold {
-    background-image: url(../img/towns/stronghold.gif);
+    background-image: url(../img/towns/stronghold.webp);
 }
 
 #tower {
-    background-image: url(../img/towns/tower.gif);
+    background-image: url(../img/towns/tower.webp);
 }
