--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,11 +2,12 @@
     font-family: Wentrisor;
     src: url(../fonts/Wentrisor.ttf);
     size-adjust: 90%;
+    font-display: swap;
 }
 
 
 body {
-    background: url(../img/lava.png) 0 0 / 100% 100% no-repeat;
+    background: url(../img/lava.webp) 0 0 / 100% 100% no-repeat;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -26,7 +27,7 @@ input[type=number]::-webkit-outer-spin-button {
 }
 
 * {
-    font-family: Wentrisor;
+    font-family: Wentrisor, Arial, Helvetica, sans-serif;
     color: lightgoldenrodyellow;
 }
 
@@ -59,11 +60,11 @@ header h1 {
 .card {
     padding: 5px;
     border: 1px solid gold;
-    background: url(../img/card_bg.png);
+    background: url(../img/card_bg.webP);
 }
 
 .card .title {
-    font-family: Wentrisor;
+    font-family: Wentrisor, Arial, Helvetica, sans-serif;
 }
 
 #towns-list {
@@ -91,7 +92,7 @@ header h1 {
 .pitlord-pic {
     height: 100px;
     width: 50px;
-    background: url(../img/sprite_sheets/pitlord.png) no-repeat;
+    background: url(../img/sprite_sheets/pitlord.webp) no-repeat;
 }
 
 .pitlord-pic:hover {
@@ -110,11 +111,11 @@ header h1 {
 }
 
 .arrow.left {
-    background: url(../img/left_arrow.png) 0 0 / 100% no-repeat;
+    background: url(../img/left_arrow.webp) 0 0 / 100% no-repeat;
 }
 
 .right.arrow {
-    background: url(../img/right_arrow.png) 0 0 / 100% no-repeat;
+    background: url(../img/right_arrow.webp) 0 0 / 100% no-repeat;
 }
 
 .arrow:active {
@@ -176,7 +177,7 @@ header h1 {
 .demon-pic {
     height: 100px;
     width: 50px;
-    background: url(../img/sprite_sheets/demon.png) no-repeat;
+    background: url(../img/sprite_sheets/demon.webp) no-repeat;
 }
 
 .demon-pic:hover {
@@ -204,7 +205,7 @@ header h1 {
 #cost-pic {
     width: 58px;
     height: 35px;
-    background: url(../img/cost.png) no-repeat;
+    background: url(../img/cost.webp) no-repeat;
 }
 
 footer {
@@ -313,7 +314,7 @@ a {
     display: block;
     width: 64px;
     height: 30px;
-    background: url('../img/sprite_sheets/ok_button.png') no-repeat;
+    background: url('../img/sprite_sheets/ok_button.webp') no-repeat;
     margin-top: 0.8rem;
 }
 
